v6.6
-----
: Fixed a bug that caused DLC checkboxes not to work correctly due to a change made by Valve


v6.5
-----
+ Added the ability to add notes to games on your wishlist
+ Added current price data when viewing a Steam gift in inventory
+ Added "Visit Trading Forum" link to badge pages when you get level to level 5 of that badge
+ Added a button to view hidden spam comments on Steam Workshop and community pages
: Fixed a bug that caused achievement sorting not to work correctly
: Fixed active market listing total to work with new data format
: Fixed a bug that would sometimes cause you not to be able to remove an item from your wishlist
: Updated highlighting code to be more robust
- Removed button to delete owned games from wishlist, as Steam now does this automatically
- Removed "Remove from wishlist" link on store pages, due to change in Valve's servers

v6.4.1
-----
: Fixed a bug where SteamCardExchange links weren't showing properly 
: Fixed a bug where sometimes a user's wishlist wouldn't load properly 
: Fixed a bug that would cause highlighting to not work correctly for some users 
: Fixed a bug that caused PCGamingWiki links not to show correctly

v6.4
-----
+ Added a progress bar to the header that indicates if Enhanced Steam is processing requests
+ Added a "lightbox" effect to app page screenshots
+ Increased Early Access detection speed (thanks henryg!)
: Fixed the number of API requests to conform with Valve's throttling limits
- Removed ability to hide DLC from unowned games, as it is no longer feasible with new API limits
- Removed the "friends own/want/reviewed" tags, to conform with API throttling limits

v6.3.5
-----
+ Added platform icons to the summer sale homepage
: Fixed scoreboard scaling to account for live updates

v6.3.4
-----
+ Rewrote regional price comparision to increase speed and pull data from our own API server

v6.3.3
-----
- Removed a feature that caused many people's wishlist to load slowly

v6.3.2
-----